Import of RNEWSHAM/WebService-DPD-API-v0.0001 from CPAN.
gitpan-cpan-distribution: WebService-DPD-API
gitpan-cpan-version:      v0.0001
gitpan-cpan-path:         RNEWSHAM/WebService-DPD-API-v0.0001.tar.gz
gitpan-cpan-author:       RNEWSHAM
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution WebService-DPD-API,
-version 0.001_03:
+version v0.0001:
 
   communicates with DPD API
 
